--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
     "react-native-navigation": "*",
     "@testing-library/react-native": "*",
     "detox": "*"
+  },
+  "devDependencies": {
+    "metro-react-native-babel-preset": "0.59.0",
+    "@babel/core": "7.10.3",
+    "@babel/plugin-proposal-export-default-from": "7.10.1",
+    "@babel/plugin-proposal-export-namespace-from": "7.10.1"
   }
 }
