--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "detox-testing-library-rnn-adapter",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "An adapter for testing react-native-navigation projects using jest and detox api. It allow's converting your existing detox e2e tests to render tests using jest.",
   "license": "MIT",
   "publishConfig": {
@@ -12,7 +12,10 @@
     "type": "git",
     "url": "https://github.com/wix-playground/detox-testing-library-rnn-adapter.git"
   },
-  "main": "index.js",
+  "scripts": {
+    "prepublish": "./node_modules/.bin/babel src --out-dir lib"
+  },
+  "main": "lib/index.js",
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
@@ -23,6 +26,7 @@
   "devDependencies": {
     "metro-react-native-babel-preset": "0.59.0",
     "@babel/core": "7.10.3",
+    "@babel/cli": "7.10.3",
     "@babel/plugin-proposal-export-default-from": "7.10.1",
     "@babel/plugin-proposal-export-namespace-from": "7.10.1"
   }
